--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,34 +1,47 @@
 html {
-  font-size: 50%;
+  font-size: 60%;
 }
 
 .bg-blue {
-  background-color: rgba(16, 111, 160, 0.92);
+  background-color: rgba(16, 111, 160, 0.86);
   position: absolute;
   width: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
   bottom: 0;
   z-index: 2;
+  overflow-y: scroll;
 }
 
 .text {
   color: white;
-  font-weight: 300;
-  font-size: 0.9rem;
+  font-weight: 500;
   letter-spacing: 0.2rem;
   white-space: nowrap;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
 }
 
 .text.text--small {
-  font-size: 1rem;
-  letter-spacing: 0.1rem;
+  font-size: 0.7rem;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 375px) {
   html {
-    font-size: 60%;
+    font-size: 70%;
   }
 }
 
@@ -38,6 +51,9 @@ html {
   }
   .bg-blue {
     width: 100%;
+  }
+  .text {
+    font-weight: 300;
   }
 }
 
@@ -51,10 +67,10 @@ html {
 }
 
 @media only screen and (min-width: 1200px) {
+  html {
+    font-size: 110%;
+  }
   .bg-blue {
     width: 50%;
-  }
-  .text {
-    font-size: 1.2rem;
   }
 }
