--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,7 +16,7 @@ html {
 
 .text {
   color: white;
-  font-weight: 500;
+  font-weight: 300;
   letter-spacing: 0.2rem;
   white-space: nowrap;
   font-size: 0.8rem;
@@ -43,9 +43,37 @@ html {
   display: block;
 }
 
+.logo {
+  max-width: 420px;
+  margin-left: -12px;
+}
+
+.button {
+  border: 1px solid white;
+  border-radius: 100px;
+  padding: 0.375rem 0.75rem;
+}
+
+a.button:hover {
+  background-color: white;
+  color: rgba(16, 111, 160, 0.86);
+  text-decoration: none;
+  -webkit-transition: background-color 0.5s;
+  transition: background-color 0.5s;
+}
+
 @media only screen and (min-width: 375px) {
   html {
     font-size: 70%;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .wfull-when-small {
+    max-width: 100%;
+  }
+  .text {
+    font-weight: 500;
   }
 }
 
@@ -55,9 +83,6 @@ html {
   }
   .bg-blue {
     width: 100%;
-  }
-  .text {
-    font-weight: 300;
   }
   .block-when-small {
     display: inline-block;
