--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,7 +18,6 @@ html {
   color: white;
   font-weight: 300;
   letter-spacing: 0.2rem;
-  white-space: nowrap;
   font-size: 0.8rem;
 }
 
@@ -49,8 +48,6 @@ html {
 }
 
 .button {
-  border: 1px solid white;
-  border-radius: 100px;
   padding: 0.375rem 0.75rem;
   -webkit-transition: background-color 0.5s;
   transition: background-color 0.5s;
@@ -65,6 +62,9 @@ a.button:hover {
 @media only screen and (min-width: 375px) {
   html {
     font-size: 70%;
+  }
+  .menu {
+    font-size: 60%;
   }
 }
 
