--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,14 +11,8 @@ h2 {
   color: white;
   text-transform: uppercase;
   font-weight: 400;
-  font-size: 1rem;
-}
-
-h3 {
-  color: white;
-  text-transform: uppercase;
-  font-weight: 400;
   font-size: 0.75rem;
+  letter-spacing: 0.2rem;
 }
 
 .bg-blue {
@@ -47,6 +41,10 @@ h3 {
   font-size: 0.7rem;
 }
 
+.section {
+  padding: 2rem 0;
+}
+
 .bg-blue a:link,
 .bg-blue a:visited,
 .bg-blue a:hover,
@@ -73,6 +71,11 @@ h3 {
   padding: 0.375rem 0.75rem;
   -webkit-transition: background-color 0.5s;
   transition: background-color 0.5s;
+}
+
+.callout {
+  font-weight: 400;
+  padding-top: 0.5rem;
 }
 
 a.button:hover {
