--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -2,7 +2,7 @@
   margin-bottom: 1rem;
   display: inline-block;
   font-weight: 400;
-  font-size: 50%;
+  font-size: 0.6rem;
   letter-spacing: 0.2rem;
   white-space: nowrap;
 }
