--- a/src/components/HomeLayout.css
+++ b/src/components/HomeLayout.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 .bg-blue {
-  background-color: rgba(16, 111, 160, 0.86);
+  background-color: rgba(16, 111, 160, 0.9);
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -76,6 +76,10 @@ h2 {
 
 .block-when-small {
   display: block;
+}
+
+.hidden-when-small {
+  display: none;
 }
 
 .logo {
@@ -151,6 +155,9 @@ a.button.button--inverse:hover {
   }
   .bg-blue {
     width: 75%;
+  }
+  .hidden-when-small {
+    display: block;
   }
 }
 
