--- a/src/components/HomeLayout.css
+++ b/src/components/HomeLayout.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 .bg-blue {
-  background-color: rgba(16, 111, 160, 0.86);
+  background-color: rgba(16, 111, 160, 0.94);
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -32,6 +32,17 @@ h2 {
   z-index: 2;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+}
+
+.bg-img {
+  height: 100vh;
+  display: inline-block;
+  width: 100%;
+  object-fit: cover;
+}
+
+.bg-img--right {
+  display: none;
 }
 
 .text {
@@ -150,7 +161,14 @@ a.button.button--inverse:hover {
     font-size: 95%;
   }
   .bg-blue {
-    width: 75%;
+    width: 50%;
+  }
+  .bg-img--left {
+    width: 50%;
+  }
+  .bg-img--right {
+    display: inline-block;
+    width: 50%;
   }
 }
 
@@ -159,6 +177,9 @@ a.button.button--inverse:hover {
     font-size: 110%;
   }
   .bg-blue {
+    width: 50%;
+  }
+  .bg-img {
     width: 50%;
   }
 }
